Migrate the project from ImGui to LWJGL-ThinGL.
Note: ImGui will still be integrated and use in the feature for the "scenario editor".