@@ -1,40 +1,33 @@
 package com.bascenario.util.render;
 
-import com.bascenario.util.RenderUtil;
-import imgui.*;
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
 import java.util.*;
+import java.util.List;
+
+import net.raphimc.thingl.text.font.Font;
 
 public class FontUtil {
-    private static final Map<String, List<ImFont>> NAME_TO_FONTS = new HashMap<>();
+    private static final Map<String, List<Font>> NAME_TO_FONTS = new HashMap<>();
 
-    public static ImFont getFont(String name, int size) {
+    public static Font getFont(String name, int size) {
         return NAME_TO_FONTS.get(name).get(Math.max(0, Math.min(size - 1, 150)));
     }
 
     public static void loadFonts() {
-        final ImGuiIO io = ImGui.getIO();
-
-        final ImFontConfig config = new ImFontConfig();
-        loadFont(config, "NotoSansRegular", "/assets/base/fonts/NotoSans-Regular.ttf");
-        loadFont(config, "NotoSansSemiBold", "/assets/base/fonts/NotoSans-SemiBold.ttf");
-
-        config.destroy();
-        io.getFonts().build();
+        loadFont("NotoSansRegular", "/assets/base/fonts/NotoSans-Regular.ttf");
+        loadFont("NotoSansSemiBold", "/assets/base/fonts/NotoSans-SemiBold.ttf");
     }
 
-    private static void loadFont(ImFontConfig config, String name, String font) {
-        final List<ImFont> fonts = new ArrayList<>();
-        for (int i = 1; i <= 150; i++) {
-            config.setName(name + " " + i + "px");
-            try {
-                fonts.add(ImGui.getIO().getFonts().addFontFromMemoryTTF(IOUtils.toByteArray(Objects.requireNonNull(
-                        RenderUtil.class.getResourceAsStream(font))), i, config));
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+    private static void loadFont(String name, String font) {
+        final List<Font> fonts = new ArrayList<>();
+
+        try {
+            final byte[] fontData = FontUtil.class.getResourceAsStream(font).readAllBytes();
+            for (int i = 1; i <= 150; i++) {
+                fonts.add(new Font(fontData, i));
             }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
 
         NAME_TO_FONTS.put(name, fonts);
